Changed the way skills are rendered, but splitting skills into two columns and rendering those columns. Updated code to correctly sort new one-off skills. Updated styling to allow skills to now expand vertically indefinitely as two columns. Fixed styling issue with Adversary career pillbox. Fixed styling issue where last skill in a column was cut off.

--- a/scss/components/_charactersheet.scss
+++ b/scss/components/_charactersheet.scss
@@ -2,6 +2,16 @@ $swffg-table-header-color: rgb(145, 145, 145);
 &.sheet {
   &.actor {
 
+    &.adversary {
+      .character {
+        .sheet-body {
+          .skillsTablesGrid {
+            height: calc(100% - 32.1875rem)
+          }
+        }
+      }
+    }
+
     .character {
       .header-fields {
         flex: 1;
@@ -255,7 +265,7 @@ $swffg-table-header-color: rgb(145, 145, 145);
         }
 
         .skillsTablesGrid {
-          height: calc(100% - 32.1875rem);
+          height: calc(100% - 33.1875rem);
           overflow:auto;
         }
       
